@@ -14,6 +14,10 @@ a greater than 1 fixed quantifier. This issue was found by Yunho Kim.
 
 3. Added support for callouts from pcre2_substitute().
 
+4. The POSIX functions are now all called pcre2_regcomp() etc., with wrappers
+that use the standard POSIX names. This should help avoid linking with the 
+wrong library in some environments.
+
 
 Version 10.32 10-September-2018
 -------------------------------
